# napari-chatgpt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  test_notebook.ipynb  tox.ini
.github/workflows/: codeql.yml  just_deploy.yml  publish.yml  test.yml  test_and_deploy.yml  test_and_deploy.yml.hide
.napari-hub/: DESCRIPTION.md  config.yml
code_review/: 00_COMPREHENSIVE_REVIEW.md  01_core_root.md  02_chat_server.md  03_llm.md  04_microplugin.md  05_omega_agent_core.md  06_omega_agent_napari_tools.md  07_omega_agent_search_special_tools.md  08_utils_python.md  09_utils_web.md  10_utils_strings.md  11_utils_other.md  12_build_config.md  COMPREHENSIVE_TEST_REVIEW.md  core_modules_tests_review.md  omega_agent_tools_tests_review.md  utils_misc_tests_review.md  utils_python_tests_review.md  utils_strings_tests_review.md  utils_web_tests_review.md
recipe/: meta.yaml
scripts/: generate_wiki_screenshots.py
src/microplugin/: microplugin_window.py
src/microplugin/code_editor/: clickable_icon.py  code_drop_send_widget.py  code_snippet_editor_widget.py  code_snippet_editor_window.py  console_widget.py  python_code_editor_manager.py  python_code_editor_widget.py  python_syntax_highlighting.py  text_input_widget.py  yes_no_cancel_question_widget.py
src/microplugin/demo/: microplugin_demo.py
src/microplugin/formating/: black_formating.py
src/microplugin/network/: code_drop_client.py  code_drop_server.py  discover_worker.py  receive_worker.py
src/microplugin/network/demo/: code_drop_client_demo.py  code_drop_server_demo.py
src/microplugins/: microplugin_window.py
src/microplugins/code_snippet_editor/: __init__.py  clickable_icon.py  code_snippet_editor_widget.py  code_snippet_editor_window.py  python_code_completer.py  python_code_editor_widget.py  python_syntax_highlighting.py  save_confirmation_widget.py
src/microplugins/formating/: black_formating.py
src/microplugins/network/: broadcast_worker.py  code_drop_client.py  code_drop_server.py  discover_worker.py  receive_worker.py
src/microplugins/network/_old/: code_drop.py  code_drop_demo.py
src/microplugins/network/demo/: code_drop_client_demo.py  code_drop_client_widget.py  code_drop_server_demo.py
src/napari_chatgpt/: __init__.py  _sample_data.py  _widget.py  conftest.py  napari.yaml  openai_key.py
src/napari_chatgpt/_sandbox/: all_qstyle_icons.py  bard_demo.py  conv_agent_demo.py  duckduckgo.py  google.py  gpt4all_demo.py  gtts_demo.py  lanchain_openai.py  new_agent.py  new_agent_2.py  ollama_demo.py  openai_list_models.py  openai_vision.py  playwright_sandbox.py  qtawesome_demo.py  speech_recognition_demo.py  terminal.py  test.py
src/napari_chatgpt/_tests/: test_widget.py
src/napari_chatgpt/chat_server/: callback_handle_chat.py  callback_handler_tool.py  callbacks.py  chat_callback_handler.py  chat_response.py  chat_server.py  chat_server_plain.py  prompt_templates.py
src/napari_chatgpt/chat_server/callbacks/: callbacks.py  callbacks_arbol_stdout.py  callbacks_handle_chat.py  callbacks_handler_tool.py
src/napari_chatgpt/chat_server/demo/: chat_server_demo.py
src/napari_chatgpt/chat_server/static/: chat.js  marked-highlight.js  prism.css  prism.js  sunlight.dark.css  tailwind.min.css
src/napari_chatgpt/chat_server/templates/: index.html
src/napari_chatgpt/chat_server/tests/: test_chat_response_tokens.py  test_chat_server_robustness.py
src/napari_chatgpt/llm/: bard.py  gpt4all.py  litemind_api.py  llm.py  llms.py  ollama.py  token_counter_callback.py
src/napari_chatgpt/llm/api_keys/: api_key.py  api_key_vault.py  api_key_vault_dialog.py
src/napari_chatgpt/llm/test/: bard_tests.py  test_custom_apis.py
src/napari_chatgpt/llm/tests/: test_custom_apis.py  test_token_counter_callback.py
src/napari_chatgpt/microplugin/: microplugin_window.py
src/napari_chatgpt/microplugin/code_editor/: __init__.py  clickable_icon.py  code_drop_send_widget.py  code_snippet_editor_widget.py  code_snippet_editor_window.py  console_widget.py  python_code_completer.py  python_code_editor_manager.py  python_code_editor_widget.py  python_syntax_highlighting.py  text_dialog.py  text_input_widget.py  yes_no_cancel_question_widget.py
src/napari_chatgpt/microplugin/demo/: microplugin_demo.py
src/napari_chatgpt/microplugin/formating/: black_formating.py
src/napari_chatgpt/microplugin/network/: broadcast_worker.py  code_drop_client.py  code_drop_server.py  discover_worker.py  receive_worker.py
src/napari_chatgpt/omega/: napari_bridge.py  omega_init.py
src/napari_chatgpt/omega/demo/: omega_agent_demo.py  omega_agent_napari_demo.py
src/napari_chatgpt/omega/memory/: memory.py  omega_memory.py
src/napari_chatgpt/omega/omega_agent/: ConversationalChatOmegaAgent.py  OmegaOpenAIFunctionsAgentOutputParser.py  OpenAIFunctionsOmegaAgent.py  agent.py  omega_agent.py  (+7 more)
src/napari_chatgpt/omega_agent/: napari_bridge.py  omega_agent.py  omega_init.py  prompts.py
src/napari_chatgpt/sandbox/: agent_demo.py  beautiful_soup_demo.py  conv_agent_demo.py  enumerate_functions.py  enumerate_methods.py  google.py  gtts_demo.py  lanchain_openai.py  speech_recognition_demo.py  terminal.py  tts_demo.py  whisper_cpp.py
src/napari_chatgpt/tests/: test_napari_integration.py
src/napari_chatgpt/tools/: async_base_tool.py  file_download.py  functions_info.py  google_search_tool.py  human_input_tool.py  math_tool.py  napari_base_tool.py  napari_file_open.py  napari_viewer_control.py  napari_widget_maker.py  tool_callback_handler.py  web_search_tool.py  wikipedia_query_tool.py  wikipedia_search_tool.py
src/napari_chatgpt/utils/: api_key_vault.py  api_key_vault_dialog.py  browser_widget.py  camel_case_to_normal.py  download_files.py  duckduckgo.py  dynamic_import.py  exception_guard.py  extract_urls.py  filter_lines.py  find_function_name.py  folders.py  google.py  headers.py  inspection.py  installed_packages.py  llm_cache.py  missing_imports.py  missing_libraries.py  open_in_napari.py  open_zarr_in_napari.py  openai_key.py  scrapper.py  summarizer.py  wikipedia.py
(+307 files in other folders)
