[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "napari-chatgpt"
description = "A napari plugin that brings an LLM-powered agent (Omega) to interactive image analysis."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Loic A. Royer", email = "royerloic@gmail.com" }]
requires-python = ">=3.10"
dynamic = ["version"]

# --- runtime dependencies ---
dependencies = [
    # Core LLM library
    "litemind[documents,rag,tables]>=2026.2.1",

    # Scientific computing
    "numpy>=1.26",
    "scikit-image>=0.21",
    "numba>=0.60",
    "xarray>=2024.1.0,<2025",  # Pin <2025: newer versions require Python 3.11+
    "matplotlib>=3.7",

    # Web/API
    "fastapi>=0.109",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "httpx>=0.24",

    # Qt/GUI
    "magicgui>=0.7",
    "qtpy>=2.0",
    "QtAwesome>=1.0",

    # Data/IO
    "imageio[ffmpeg,pyav]>=2.31",
    "ome-zarr>=0.8",
    "nbformat>=5.7",
    "lxml>=4.9",
    "lxml_html_clean",

    # Utilities
    "cryptography>=43.0",
    "tabulate>=0.9",
    "arbol",
    "duckduckgo_search>=7.0.0",
    "jedi>=0.18",
    "black>=23.0",
]

[project.optional-dependencies]
testing = ["tox", "pytest", "pytest-cov", "pytest-mock", "pytest-qt", "napari", "pyqt5", "cellpose", "stardist", "tensorflow", "nvidia-cuda-nvcc-cu12"]

[project.entry-points]
"napari.manifest" = { "napari-chatgpt" = "napari_chatgpt:napari.yaml" }

[project.urls]
Homepage = "https://github.com/royerlab/napari-chatgpt"
Issues = "https://github.com/royerlab/napari-chatgpt/issues"

# -------------------------------------------------------------------------
# Hatch specifics
# -------------------------------------------------------------------------
[tool.hatch.version]
path = "src/napari_chatgpt/__init__.py"

# Ship code from the src/ layout
[tool.hatch.build]
sources = ["src"]

# Control *what* is included in each artefact
[tool.hatch.build.targets.sdist]
ignore-vcs = true                     # ignore .gitignore patterns :contentReference[oaicite:0]{index=0}
exclude = [
    # developer & CI auxiliaries
    ".github/**",
    ".napari-hub/**",
    "recipe/**",
    # generated or heavy artefacts
    "dist/**",
    "**/*.egg-info",
    # documentation / non-runtime assets
    "art/**",
    "manuscript/**",
    # tests and local junk
    "**/tests/**",
    "**/.DS_Store",
    "sandbox/**",
    # plugin-internal resources that shouldn’t be in wheels
    "src/napari_chatgpt/resources/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/napari_chatgpt"]     # wheel only contains code; others auto-excluded :contentReference[oaicite:1]{index=1}

[tool.hatch.envs.hatch-test]
extra-dependencies = ["tox", "pytest", "pytest-cov", "pytest-mock", "pytest-qt", "napari", "pyqt5", "black", "cellpose", "stardist", "tensorflow", "nvidia-cuda-nvcc-cu12"]
default-args = ["src/"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "integration: tests that make live HTTP requests or require external services",
    "llm: tests that require an LLM API key",
    "slow: tests that take more than 30 seconds",
]
