[metadata]
name = napari-chatgpt

description = A napari plugin to process and analyse images with chatGPT.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/royerlab/napari-chatgpt
author = Loic A. Royer
author_email = royerloic@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/royerlab/napari-chatgpt/issues
    Documentation = https://github.com/royerlab/napari-chatgpt#README.md
    Source Code = https://github.com/royerlab/napari-chatgpt
    User Support = https://github.com/royerlab/napari-chatgpt/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    scikit-image
    qtpy
    langchain==0.0.144
    fastapi
    uvicorn
    websockets
    openai
    tiktoken
    wikipedia
    lxml
    gTTS
    playsound
    matplotlib
    xarray
    arbol
    playwright
    duckduckgo_search
    ome-zarr
    scikit-video




python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-chatgpt = napari_chatgpt:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
