[metadata]
name = napari-chatgpt
version = release_v2024.5.14.3
description = A napari plugin to process and analyse images with chatGPT.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/royerlab/napari-chatgpt
author = Loic A. Royer and contributors
author_email = royerloic@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/royerlab/napari-chatgpt/issues
    Documentation = https://github.com/royerlab/napari-chatgpt#README.md
    Source Code = https://github.com/royerlab/napari-chatgpt
    User Support = https://github.com/royerlab/napari-chatgpt/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    scikit-image
    qtpy
    QtAwesome
    langchain==0.2.0rc2
    langchain-community==0.2.0rc1
    langchain-openai==0.1.6
    langchain-anthropic==0.1.11
    openai==1.29.0
    anthropic
    fastapi
    uvicorn
    websockets
    tiktoken
    wikipedia
    lxml
    gTTS
    playsound
    matplotlib
    xarray
    arbol
    playwright
    duckduckgo_search==5.3.0b4
    ome-zarr
    transformers
    cryptography
    tabulate
    numba
    imageio[ffmpeg,pyav]
    notebook
    nbformat
    jedi
    black

    # needed because lxml has spun out this code out of its main repo:
    lxml_html_clean


python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-chatgpt = napari_chatgpt:napari.yaml
omega.tools =
    example_tool = napari_chatgpt.omega.tools.examples.example_omega_tool:ExampleOmegaTool

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml
